[gd_scene load_steps=5 format=2]

[ext_resource path="res://traps/Zone.gd" type="Script" id=2]
[ext_resource path="res://effects/PulseTween.tscn" type="PackedScene" id=3]
[ext_resource path="res://traps/sprites/zone5.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="Zone" type="Node2D" groups=["trap"]]
z_index = -1
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 32, 32 )
texture = ExtResource( 4 )
vframes = 2

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 32, 32 )
shape = SubResource( 1 )

[node name="AudioSuccess" type="AudioStreamPlayer2D" parent="."]

[node name="PulseTween" parent="." instance=ExtResource( 3 )]

[node name="AudioFail" type="AudioStreamPlayer2D" parent="."]

[node name="Grid" type="Sprite" parent="."]
position = Vector2( 32, 32 )
texture = ExtResource( 4 )
vframes = 2
frame = 1

[node name="GridPulseTween" parent="." instance=ExtResource( 3 )]
